--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-230.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: 6faa5110-0329-11ed-b74c-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
-  - {name: 未知国家-3.13MB/s(Youtube:不良林), server: us03.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us03.gogogoo.cyou}}
-  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇸🇬 新加坡-306.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-326.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-488.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-520.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-501.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-459.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-353.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: 7ec57bc9-5cd5-4adf-a640-369458d7b27e, sni: 625us.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-317.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-339.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.79MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.61MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.87MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-230.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-230.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-230.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-230.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-230.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-230.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-230.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 未知国家-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
