--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-459.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-353.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: 7ec57bc9-5cd5-4adf-a640-369458d7b27e, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-317.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-339.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.79MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.61MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.87MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-398.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇸🇬 新加坡-1.17MB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: 7ec57bc9-5cd5-4adf-a640-369458d7b27e, sni: 625tw.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-501.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-508.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-319.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-351.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇬🇧 英国-1.13MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-459.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
