--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-339.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-398.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇸🇬 新加坡-1.17MB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: 7ec57bc9-5cd5-4adf-a640-369458d7b27e, sni: 625tw.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-501.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-353.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇻🇳 越南-6.02MB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-5.06MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 未知国家-3.02MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
+  - {name: 🇸🇬 新加坡-554.3KB/s(Youtube:不良林), server: 626sg05.ok365.cyou, port: 80, type: trojan, password: 7ec57bc9-5cd5-4adf-a640-369458d7b27e, sni: 626sg05.ok365.cyou, skip-cert-verify: true}
   - {name: 🇨🇳 中国-508.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-319.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-351.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
+      - 未知国家-3.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-554.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
+      - 未知国家-3.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-554.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
+      - 未知国家-3.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-554.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
+      - 未知国家-3.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-554.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
+      - 未知国家-3.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-554.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
+      - 未知国家-3.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-554.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
+      - 未知国家-3.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-554.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-319.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-351.5KB/s(Youtube:不良林)
